[gd_scene load_steps=2 format=3 uid="uid://kelaiuqlmxfp"]

[ext_resource type="Script" path="res://HUD.gd" id="1_20sdl"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_20sdl")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 16.0
offset_right = 205.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 64
text = "Score:"

[node name="SpawnCoinsButton" type="Button" parent="."]
offset_left = 33.0
offset_top = 92.0
offset_right = 178.0
offset_bottom = 123.0
text = "Start Game"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -44.0
offset_right = 142.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64

[node name="ResetButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = 66.0
offset_right = 50.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
text = "Reset Game"

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -44.0
offset_right = 211.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "King's Bounty"

[node name="StartGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 66.0
offset_right = 48.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[connection signal="pressed" from="SpawnCoinsButton" to="." method="_on_spawn_coins_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
